--- a/Task-1/src/style.css
+++ b/Task-1/src/style.css
@@ -20,7 +20,10 @@ body {
   line-height: 1.5;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
+  width: 100%;
+  max-width: none;
   min-height: 100vh;
+  background-color: #E3CFCF;
 }
 
 /* 6. Improve media defaults */
@@ -57,14 +60,20 @@ h1, h2, h3, h4, h5, h6 {
 section {
   display: flex;
   flex-direction: column;
-  background-color: #E3CFCF;
 }
 
-.section__img {
+.image {
   flex: 1;
+  display: flex;
+  height: 100%;
 }
 
-.container {
+.image__img {
+  flex: 1;
+  object-fit: cover;
+}
+
+.content {
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -72,6 +81,14 @@ section {
   align-items: center;
   min-width: 375px;
   min-height: 464px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: clamp(343px, 91.47vw, 512px);
   gap: 24px;
 }
 
@@ -110,19 +127,14 @@ section {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   }
 
-  .section__img {
-
-  }
-
-  .container {
+  .content {
     min-width: 720px;
     min-height: 576px;
   }
 
-  .container__text {
-    width: 512px;
+  .container {
+    width: clamp(512px, 0.3555555555555556vw, 1920px);
   }
 }
