image topleft positioned

--- a/Task-2/src/style.css
+++ b/Task-2/src/style.css
@@ -56,6 +56,8 @@ h1, h2, h3, h4, h5, h6 {
 section {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 64px 16px;
   gap: 32px;
 }
@@ -85,5 +87,58 @@ section {
 
 .button__view-all-recipes {
   background-color: transparent;
-  border: none
+  border: none;  
+}
+
+.view-all-recipes__h3 {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.container__content {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+.content__image-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  position: relative;
+}
+
+.front-image {
+  width: clamp(304px, 0.8106666666666667vw, 800px);
+  height: clamp(304px, 0.8106666666666667vw, 800px);
+  border-radius: 337.78px;
+}
+
+.background-image-topleft {
+  position: absolute;
+  bottom: 190px;
+  left: -35.5px;
+  z-index: -2;
+}
+
+.background-image-topright {
+  position: absolute;
+  top: 638px;
+  right: 0px;
+  z-index: -2;
+}
+
+.background-image-bottomleft {
+  position: absolute;
+  bottom: 618px;
+  left: 0px;
+}
+
+.background-image-bottomright {
+  position: absolute;
+  bottom: 200px;
+  right: 0px;
 }
