--- a/Task-2/src/style.css
+++ b/Task-2/src/style.css
@@ -108,7 +108,6 @@ section {
   justify-content: center;
   align-items: center;
   gap: 32px;
-  position: relative;
 }
 
 .front-image {
@@ -117,11 +116,33 @@ section {
   border-radius: 337.78px;
 }
 
-.background-image-topleft {
+.front-image-div {
+  position: relative;
+}
+
+.front-image-div__top-left-corner {
   position: absolute;
-  bottom: 190px;
-  left: -35.5px;
-  z-index: -2;
+  height: 135.11px;
+  width: 135.11px;
+  left: -57.23px;
+  top: -20.40px;
+  background-image: url("images/30a9edcdefcf961a7007b00f86cb431c286b8059.png");
+  z-index: 2;
+}
+
+.background-image-div {
+   /* width: 226.02px;
+  height: 213.69px;
+    /* Combine transforms into a single transform property */
+  /* transform: scaleX(-1) translate(-54.75px, 192.13px); */
+  /* Position it absolutely within the top-left-corner container */
+  /* position: absolute; */
+}
+
+.background-image-topleft {
+ 
+  z-index: -1;
+ 
 }
 
 .background-image-topright {
@@ -141,4 +162,8 @@ section {
   position: absolute;
   bottom: 200px;
   right: 0px;
+}
+
+.cocktail-name {
+  text-align: center;
 }
